# vier-gewinnt

./: .gitignore  CMakeLists.txt  README.md  ViergewinntStructure.drawio  _CMakeLists.txt  test.txt
inc/: Menu.hpp
pseudocode/: class_Menu.txt
source/: test.cpp
